2004-11-07  Phil Blundell  <pb@nexus.co.uk>

	* Makefile (LINGUAS): Add uk.
	* po/uk.po: New file, courtesy Igor Sachko.
	
2004-08-29  Phil Blundell  <pb@nexus.co.uk>

	* Version 0.24 released.

2004-08-29  Phil Blundell  <pb@nexus.co.uk>

	* main.c: Update for compatibility with D-BUS 0.22, courtesy 
	Sjoerd Simons and Frederic Crozat.
	
2004-03-08  Philip Blundell  <philb@gnu.org>

	* Version 0.23 released.
	
2004-03-08  Philip Blundell  <philb@gnu.org>

	* main.c: Support new "org.bluez.PinAgent" service as well as old
	"org.handhelds.gpe" namespace.
	* pin-dbus.c: Likewise.
	* bluez.conf: Likewise.

	* po/af.po po/de.po po/fi.po po/hu.po po/nl.po po/pl.po
	po/pt_BR.po po/ro.po po/sk.po po/sr.po: New files.
	* Makefile (LINGUAS): Add af de fi hu nl pt_BR ro sk sr.

2004-01-19  Philip Blundell  <philb@gnu.org>

	* Version 0.22 released.
	
2004-01-19  Philip Blundell  <philb@gnu.org>

	* pin-ui.c: Implement as GObject interface.
	* pin-ui.h: New file.

	* main.c, pin-dbus.c: Keep in step.

2004-01-19  Philip Blundell  <philb@gnu.org>

	* pin-dbus.c: Update for D-BUS 0.20.
	* main.c: Likewise.

2003-10-26  Philip Blundell  <philb@gnu.org>

	* Version 0.21 released.
	
2003-10-26  Philip Blundell  <philb@gnu.org>

	* main.c (main): Correctly query for DISPLAY in environment.
	Patch from Sjoerd Simons <sjoerd@luon.net>

	* familiar/control1 (Source): Added.

2003-10-21  Bastien Nocera  <hadess@hadess.net>

	* Makefile: updated
	* .cvsignore: updated
	* Makefile: install the glade files
	* bluez-pin-gpe.glade:
	* bluez-pin.glade: one glade file for desktop GNOME, and one for GPE
	* pin-ui.c: (bluez_pin_guess_name), (bluez_pin_request): use the
	glade files instead of an hard-coded UI
	Show the nice name cached by gnome-bluetooth from gconf if available
	* bt-logo.png: new logo from Jakub Steiner <jimmac@ximian.com>

2003-10-16  Bastien Nocera  <hadess@hadess.net>

	* Makefile: install the new bluez.conf file