@@ -128,7 +128,7 @@ legacy_pin_request (gboolean outgoing, gchar *address, gchar *name)
 void
 usage (char *argv[])
 {
-  fprintf (stderr, _("Usage: %s <in|out> <address>\n"), argv[0]);
+  fprintf (stderr, _("Usage: %s <in|out> <address> [name]\n"), argv[0]);
   fprintf (stderr, _(" or    %s --dbus\n"), argv[0]);
   exit (1);
 }
